--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "https://usmanjdn.github.io/usmanjdn93/codespace",
+  "homepage": "https://usmanjdn.github.io/codespace",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://usmanjdn.github.io/usmanjdn93/codespace'",
+    "build-gh": "parcel build --public-url 'https://usmanjdn.github.io/codespace'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
